        Minor bug fixes: remove bogus edit link on index listings,
	  add missing default behaviour for geolocation
	Update supersearch help text URL.
	Add nofollow to robots meta tag.
        Added new CSS class "node_name" for inline non-hyperlink references
         to node names - see README.CSS for details.
        Fix bug with diff display on nodes containing macros.
	
0.45	1 December 2004
        Made the geolocation stuff work worldwide.  Squeeeeeee!
        You can now choose between doing your distance calculations with
          the British National Grid, the Irish National Grid, or a UTM
          ellipsoid.  If you wish to use anything other than the British
          National Grid and you have pre-existing location data then you
          will need to save an edit of each node with location data before
          distance searches will work.
        In less exciting news:
          Fixed bug relating to lat/long representation.
          Removed debugging warn accidentally left in last release.
          Fixed some HTML validation errors.

0.44    17 November 2004
        Remove all traces of display_categories, which was obsoleted but
          not completely removed before.
        Improved the efficiency of the search.
        Fixed a couple of minor bugs in the search - note that node.tt
          and supersearch.tt have changed.
        Change the default indexer for new installs to Plucene.	
        Only run certain search-related tests if Plucene is installed.

0.43    21 October 2004
        Fix broken navbar changes that crept into last release.

0.42    20 October 2004
        Handle distance searching with OpenGuides::Supersearch instead of
          find_within_distance action.
        Fixed bug with paging on distance-only search (reported by Bob Walker).
        Improved encapsulation in OpenGuides::Supersearch - accessors.
        *INCOMPATIBLE CHANGE* Custom templates are now stored in