@@ -5,6 +5,7 @@
         Added new CSS class "node_name" for inline non-hyperlink references
          to node names - see README.CSS for details.
         Fix bug with diff display on nodes containing macros.
+        Fixed distance search paging bug.
 	
 0.45	1 December 2004
         Made the geolocation stuff work worldwide.  Squeeeeeee!
